--- a/app/views/googlemap.html
+++ b/app/views/googlemap.html
@@ -3,7 +3,7 @@
 
 <div ng-controller="GooglemapCtrl">
     <div class="row">
-        <div class="col-sm-6">
+        <div class="col-md-7">
             <ui-gmap-google-map
                     id="map-canvas"
                     center="map.center"
@@ -14,7 +14,19 @@
                     >
             </ui-gmap-google-map>
         </div>
-        <div class="col-sm-6">
+        <div class="col-md-5">
+            <b>Your Colleges and Universities:</b> <br>
+            <i>(Ctrl-Click for multiple selection)</i> <br>
+
+            <select multiple id="waypoints" ng-model="selectedItem">
+                <option ng-repeat="college in colleges" value="{{college.location}}">{{college.name}}</option>
+            </select>
+
+            <!--<select multiple id="waypoints">-->
+                <!--<div data-ng-repeat="college in colleges">-->
+                    <!--<option value={{college.location}}>{{college.name}}</option>-->
+                <!--</div>-->
+            <!--</select>-->
             <form class="form-horizontal" role="form">
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Start</label>
@@ -32,7 +44,7 @@
                         </select>
                     </div>
                 </div>
-                <button ng-click="calcRoute(routePoints)" type="submit" class="btn btn-default">Submit</button>
+                <button ng-click="calcRouteNEW(routePoints,selectedItem)" type="submit" class="btn btn-default">Submit</button>
             </form>
         </div>
     </div>
