--- a/app/views/addfilter.html
+++ b/app/views/addfilter.html
@@ -1,64 +1,162 @@
-<p>This is the addfilter view.</p>
-
 <div ng-controller="AddfilterCtrl">
-    <div class="row">
-        <div class="col-sm-12">
-        <h2>Size of the School</h2>
-        <b> Select all that apply:</b><br>
-        <select multiple id="schoolSize">
-            <option value="small">Small - X to Y students</option>
-            <option value="medium">Medium - X to Y students</option>
-            <option value="large">Large - X to Y students</option>
-            <option value="jumbo">Jumbo - X to Y students</option>
-        </select>
-    </div>
 
-    <div class="row">
-        <h2>Setting</h2>
-        <b> Select all that apply:</b><br>
-        <div class="col-sm-12">
-            <select class=input id="schoolSize">
-                <option value="rural">Rural</option>
-                <option value="city">City</option>
-            </select>
+    <div class="container-fluid">
+
+        <form role="form">
+
+        <div class="col-lg-6 col-md-6   col-xs-12">
+            <div class="panel panel-default">
+                <div class="panel-heading"><h3>School Size</h3></div>
+                <div class="panel-body">
+
+                        <div class="col-md-7"></div>
+                        <div class="col-md-5">
+                            <div class="col-md-6">Minimum</div>
+                            <div class="col-md-6">Maximum</div>
+                        </div>
+                            <div class="col-md-7">Number of Students:</div>
+                            <div class="col-md-5">
+                                <div class="col-md-6">
+                                    <input type="text" class="form-control" data-ng-model="myForm.schoolSize.min">
+                                </div>
+                                <div class="col-md-6">
+                                    <input type="text" class="form-control" data-ng-model="myForm.schoolSize.max">
+                                </div>
+                            </div>
+                </div>
+            </div>
         </div>
+
+
+            <div class="col-lg-6 col-md-6   col-xs-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading"><h3>Annual Cost</h3></div>
+                    <div class="panel-body">
+
+                        <div class="col-md-7"></div>
+                        <div class="col-md-5">
+                            <div class="col-md-6">Minimum</div>
+                            <div class="col-md-6">Maximum</div>
+                        </div>
+                        <div class="col-md-7">Average Annual Cost (Room and Board):</div>
+                        <div class="col-md-5">
+                            <div class="col-md-6">
+                                <input type="text" class="form-control" data-ng-model="myForm.schoolCost.min">
+                            </div>
+                            <div class="col-md-6">
+                                <input type="text" class="form-control" data-ng-model="myForm.schoolCost.max">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-6 col-md-6   col-xs-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading"><h3>Setting</h3></div>
+                    <div class="panel-body">
+
+                        <div class="col-md-6">
+                            <label class="checkbox-inline"><input type="checkbox" data-ng-model="myForm.schoolSetting.rural" value="">Rural/Country</label>
+                        </div>
+                        <div class="col-md-6">
+                            <label class="checkbox-inline"><input type="checkbox" data-ng-model="myForm.schoolSetting.city"value="">Urban/City</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-6 col-md-6   col-xs-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading"><h3>SAT/ACT Scores</h3></div>
+                    <div class="panel-body">
+
+                        <div class="col-md-7"></div>
+                        <div class="col-md-5">
+                            <div class="col-md-6">SAT</div>
+                            <div class="col-md-6">ACT</div>
+                        </div>
+                        <div class="col-md-7">Enter your scores (if applicable):</div>
+                        <div class="col-md-5">
+                            <div class="col-md-6">
+                                <input type="text" class="form-control" data-ng-model="myForm.testScore.SAT">
+                            </div>
+                            <div class="col-md-6">
+                                <input type="text" class="form-control" data-ng-model="myForm.testScore.ACT">
+                            </div>
+                        </div>
+                        <br>
+                        <br>
+                        <br>
+                        <div class="col-md-7">My scores should be:</div>
+                        <div class="col-md-5">
+                            <select multiple  id="filterTestScores" data-ng-model="myForm.testScore.matching">
+                                <option value="worst">The lowest in the school</option>
+                                <option value="average">Average for those attending</option>
+                                <option value="best">The best in the school</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-6 col-md-6   col-xs-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading"><h3>Location</h3></div>
+                    <div class="panel-body">
+                        <div class="col-md-7">My home zip code:</div>
+                        <div class="col-md-5">
+                            <input type="text" class="form-control" data-ng-model="myForm.home.zipCode">
+                        </div>
+
+                        <div class="col-md-7"></div>
+                        <div class="col-md-5">
+                            <div class="col-md-6">Minimum</div>
+                            <div class="col-md-6">Maximum</div>
+                        </div>
+                        <div class="col-md-7">School distance from home:</div>
+                        <div class="col-md-5">
+                            <div class="col-md-6">
+                                <input type="text" class="form-control" data-ng-model="myForm.home.minDistanceAway">
+                            </div>
+                            <div class="col-md-6">
+                                <input type="text" class="form-control" data-ng-model="myForm.home.maxDistanceAway">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-6 col-md-6   col-xs-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading"><h3>Sports</h3></div>
+                    <div class="panel-body">
+
+                        <div class="col-md-7">School must have these sports:</div>
+                        <div class="col-md-5">
+                            <select multiple  id="filterSports" data-ng-model="myForm.sports.sportsRequired">
+                                <option value="row1women">Womens Rowing Division I</option>
+                                <option value="row2women">Womens Rowing Division II</option>
+                                <option value="row3women">Womens Rowing Division III</option>
+                                <option value="row1men">Mens Rowing Division I</option>
+                                <option value="row2men">Mens Rowing Division II</option>
+                                <option value="row3men">Mens Rowing Division III</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <button class="btn btn-primary" data-ng-click="saveIt(newGroup)">Save Filters</button>
+
+
+        </form>
+
+
+                <!--<option value="Academics">Academic Rating</option>-->
+                <!--<option value="Social">Social Rating</option>-->
+                <!--<option value="QOL">Quality of Life Rating</option>-->
+
     </div>
-
-
-        <div class="col-md-6">
-            <b>Select a Filter:</b> <br>
-            <select id="filter">
-                <option value="SchoolSize">Size of the School</option>
-                <option value="Setting">Setting (Rural, City, etc)</option>
-                <option value="Sports">Sports</option>
-                <option value="SAT">SAT Scores</option>
-                <option value="ACT">ACT Scores</option>
-                <option value="Academics">Academic Rating</option>
-                <option value="Social">Social Rating</option>
-                <option value="QOL">Quality of Life Rating</option>
-                <option value="Cost">Cost</option>
-                <option value="Location">Location</option>
-            </select>
-            <button ng-click="getAndDisplayInfo()" type="submit" class="btn btn-success">Add Filter</button>
-        </div>
-        <div class="col-md-6">
-            <b>{{heading}}</b> <br>
-            {{description}} <br>
-            {{values}} <br>
-        </div>
-    </div>
-
-    <br>
-    <br>
-    <br>
-    <div class="row">
-
-        <div class="col-md-12">
-            <b>Existing Filters:</b> <br>
-
-        </div>
-    </div>
-
-
-
 </div>
