--- a/app/views/addfilter.html
+++ b/app/views/addfilter.html
@@ -148,7 +148,7 @@
             </div>
 
 
-            <button class="btn btn-primary" data-ng-click="saveIt(newGroup)">Save Filters</button>
+            <button class="btn btn-primary" data-ng-click="saveIt(myForm)">Save Filters</button>
 
 
         </form>
