updated bower.json to include underscore and angular-google-maps

--- a/app/views/addfilter.html
+++ b/app/views/addfilter.html
@@ -11,10 +11,13 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                                School Size
+                                <a href="javascript:;" data-toggle="collapse" data-parent="#accordion" data-target="#collapseSchoolSize">
+                                    School Size
+                                </a>
                                 <a href="javascript:;" data-toggle="collapse" data-parent="#accordion" data-target="#collapseSchoolSize">
                                     <span class="glyphicon glyphicon-plus"></span>
                                 </a>
+                                <span class="glyphicon glyphicon-check"  style="color:green"></span>
                             </h4>
                             <div id="collapseSchoolSize" class="panel-collapse collapse">
                                 <div class="panel-body">
@@ -44,10 +47,13 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                                Annual Cost
+                                <a href="javascript:;" data-toggle="collapse" data-parent="#accordion" data-target="#collapseSchoolSize">
+                                    Annual Cost
+                                </a>
                                 <a href="javascript:;" data-toggle="collapse" data-parent="#accordion" data-target="#collapseAnnlCost">
                                     <span class="glyphicon glyphicon-plus"></span>
                                 </a>
+                                <span class="glyphicon glyphicon-unchecked"></span>
                             </h4>
                             <div id="collapseAnnlCost" class="panel-collapse collapse">
                                 <div class="panel-body">
@@ -76,10 +82,13 @@
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <h4 class="panel-title">
-                                    School Setting/Locale
+                                    <a href="javascript:;" data-toggle="collapse" data-parent="#accordion" data-target="#collapseSchoolSize">
+                                        School Setting/Locale
+                                    </a>
                                     <a href="javascript:;" data-toggle="collapse" data-parent="#accordion" data-target="#collapseLocale">
                                         <span class="glyphicon glyphicon-plus"></span>
                                     </a>
+                                    <span class="glyphicon glyphicon-unchecked"></span>
                                 </h4>
                                 <div id="collapseLocale" class="panel-collapse collapse">
                                     <div class="panel-body">
@@ -100,10 +109,13 @@
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <h4 class="panel-title">
-                                    SAT/ACT Scores
+                                    <a href="javascript:;" data-toggle="collapse" data-parent="#accordion" data-target="#collapseSchoolSize">
+                                        SAT/ACT Scores
+                                    </a>
                                     <a href="javascript:;" data-toggle="collapse" data-parent="#accordion" data-target="#collapseScores">
                                         <span class="glyphicon glyphicon-plus"></span>
                                     </a>
+                                    <span class="glyphicon glyphicon-unchecked"></span>
                                 </h4>
                                 <div id="collapseScores" class="panel-collapse collapse">
                                     <div class="panel-body">
@@ -143,10 +155,13 @@
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <h4 class="panel-title">
-                                    Distance from Home
+                                    <a href="javascript:;" data-toggle="collapse" data-parent="#accordion" data-target="#collapseSchoolSize">
+                                        Distance from Home
+                                    </a>
                                     <a href="javascript:;" data-toggle="collapse" data-parent="#accordion" data-target="#collapseDistance1">
                                         <span class="glyphicon glyphicon-plus"></span>
                                     </a>
+                                    <span class="glyphicon glyphicon-check"  style="color:green"></span>
                                 </h4>
                                 <div id="collapseDistance1" class="panel-collapse collapse">
                                     <div class="panel-body">
@@ -179,10 +194,13 @@
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <h4 class="panel-title">
-                                    Distance from Another Location
+                                    <a href="javascript:;" data-toggle="collapse" data-parent="#accordion" data-target="#collapseSchoolSize">
+                                        Distance from Another Location
+                                    </a>
                                     <a href="javascript:;" data-toggle="collapse" data-parent="#accordion" data-target="#collapseDistance2">
                                         <span class="glyphicon glyphicon-plus"></span>
                                     </a>
+                                    <span class="glyphicon glyphicon-unchecked"></span>
                                 </h4>
                                 <div id="collapseDistance2" class="panel-collapse collapse">
                                     <div class="panel-body">
@@ -218,10 +236,13 @@
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <h4 class="panel-title">
-                                    Sports Teams
+                                    <a href="javascript:;" data-toggle="collapse" data-parent="#accordion" data-target="#collapseSchoolSize">
+                                        Sports Teams
+                                    </a>
                                     <a href="javascript:;" data-toggle="collapse" data-parent="#accordion" data-target="#collapseSports">
                                         <span class="glyphicon glyphicon-plus"></span>
                                     </a>
+                                    <span class="glyphicon glyphicon-unchecked"></span>
                                 </h4>
                                 <div id="collapseSports" class="panel-collapse collapse">
                                     <div class="panel-body">
