--- a/app/views/addfilter.html
+++ b/app/views/addfilter.html
@@ -1,12 +1,13 @@
 <div ng-controller="AddfilterCtrl">
 
-    <div class="container-fluid">
+<!--<div class="col-lg-5"  ng-style="{'background-image': 'url(images/temp-DeleteMe.jpg)'}">-->
+    <div class="container-fluid" ng-style="{'background-image': 'url(images/ivy.png)'}">
 
         <h3>Criteria:</h3>
 
         <form role="form">
 
-            <div class="col-lg-7">
+            <div class="col-lg-6">
 
                 <div class="col-lg-12">
                     <div class="panel panel-default">
@@ -263,7 +264,7 @@
 
             </div>
             <!--<div class="col-lg-5"  ng-style="{'background-image': 'url(images/temp-DeleteMe.jpg)'}">-->
-            <div class="col-lg-5">
+            <div class="col-lg-6">
 
                 <h1>Schools Meeting Criteria:</h1>
                 <h1>4,500   <a href="#/collegelist" class="btn btn-info" role="button">Show me the schools</a>
