refactor of filter/criteria

--- a/app/views/addfilter.html
+++ b/app/views/addfilter.html
@@ -22,19 +22,15 @@
                         </div>
                         <div id="collapseSchoolSize" class="panel-collapse collapse">
                             <div class="panel-body">
-                                <div class="col-md-7"></div>
+                                <div class="col-md-7">School must have these sports:</div>
                                 <div class="col-md-5">
-                                    <div class="col-md-6">Minimum</div>
-                                    <div class="col-md-6">Maximum</div>
-                                </div>
-                                <div class="col-md-7">Number of Students:</div>
-                                <div class="col-md-5">
-                                    <div class="col-md-6">
-                                        <input type="text" class="form-control" data-ng-model="myForm.schoolSize.min">
-                                    </div>
-                                    <div class="col-md-6">
-                                        <input type="text" class="form-control" data-ng-model="myForm.schoolSize.max">
-                                    </div>
+                                    <select multiple  id="sizeSchool" data-ng-model="myForm.schoolSize.options">
+                                        <option value="1">Under 1,000</option>
+                                        <option value="2">1,000 - 4,999</option>
+                                        <option value="3">5,000 - 9,999</option>
+                                        <option value="4">10,000 - 19,999</option>
+                                        <option value="5">20,000 and above</option>
+                                    </select>
                                 </div>
                                 <button class="btn btn-primary btn-md" data-ng-click="saveIt(myForm.schoolSize, 'schoolSize')">Save/Activate</button>
                                 <button class="btn btn-primary btn-md" data-ng-click="resetIt(myForm.schoolSize, 'schoolSize')">Remove</button>
