--- a/app/views/collegelist.html
+++ b/app/views/collegelist.html
@@ -2,10 +2,14 @@
 
 
     <div class="container-fluid" >
+        <h1>ROWING COLLEGES</h1>
         <button class="btn btn-primary btn-md" data-ng-click="getColleges()">GET COLLEGES</button>
 
-        <div ng-repeat="college in colleges">
-            {{college.institution_nm}}
+        <div ng-repeat="college in colleges | orderBy:'name'">
+            <div class="col-md-6">{{college.name}}</div>
+            <div class="col-md-2">{{college.city}},{{college.state_cd}}</div>
+            <div class="col-md-2">{{college.locale}}</div>
+            <div class="col-md-2">{{college.school_size}}</div>
         </div>
 
     </div>
