--- a/app/views/googlemap.html
+++ b/app/views/googlemap.html
@@ -45,6 +45,8 @@
                     </div>
                 </div>
                 <button ng-click="calcRouteNEW(routePoints,selectedItem)" type="submit" class="btn btn-default">Submit</button>
+                <br>
+                <button ng-click="getCollegesOnRoute(routePoints,selectedItem)" type="submit" class="btn btn-default">CollegesOnRoute</button>
             </form>
         </div>
     </div>
