--- a/app/views/criteria.html
+++ b/app/views/criteria.html
@@ -252,7 +252,7 @@
                                 <div class="col-md-7">School must have these sports:</div>
                                 <div class="col-md-5">
                                     Select as many options as you'd like <br>(Ctrl click to select multiple).
-                                    <select class="form-control"
+                                    <select size="10" class="form-control"
                                             multiple="true"
                                             data-ng-model="myForm.sports.options"
                                             data-ng-options="s.name for s in sports track by s.id">
