--- a/app/views/criteria.html
+++ b/app/views/criteria.html
@@ -30,13 +30,6 @@
                                             data-ng-model="myForm.schoolSize.options"
                                             data-ng-options="s.name for s in sizes track by s.id">
                                     </select>
-                                    <!--<select class="form-control" size="5" multiple  id="sizeSchool" data-ng-model="myForm.schoolSize.options">-->
-                                        <!--<option value="1">Under 1,000</option>-->
-                                        <!--<option value="2">1,000 - 4,999</option>-->
-                                        <!--<option value="3">5,000 - 9,999</option>-->
-                                        <!--<option value="4">10,000 - 19,999</option>-->
-                                        <!--<option value="5">20,000 and above</option>-->
-                                    <!--</select>-->
                                 </div>
                                 <button class="btn btn-primary btn-md" data-ng-click="saveIt(myForm.schoolSize, 'schoolSize')">Save/Activate</button>
                                 <button class="btn btn-primary btn-md" data-ng-click="resetIt(myForm.schoolSize, 'schoolSize')">Remove</button>
@@ -141,10 +134,11 @@
                                 <br>
                                 <div class="col-md-7">My scores should be:</div>
                                 <div class="col-md-5">
-                                    <select class="form-control" multiple  id="filterTestScores" data-ng-model="myForm.testScore.options">
-                                        <option value="worst">The lowest in the school</option>
-                                        <option value="average">Average for those attending</option>
-                                        <option value="best">The best in the school</option>
+                                    Select as many options as you'd like <br>(Ctrl click to select multiple).
+                                    <select class="form-control"
+                                            multiple="true"
+                                            data-ng-model="myForm.testScore.options"
+                                            data-ng-options="tR.name for tR in TestScoreRelations track by tR.id">
                                     </select>
                                 </div>
                                 <button class="btn btn-primary btn-md" data-ng-click="saveIt(myForm.testScore, 'testScore')">Save/Activate</button>
