--- a/app/views/googlemap.html
+++ b/app/views/googlemap.html
@@ -1,9 +1,97 @@
-<p>This is the googleMap view.</p>
-
 
 <div ng-controller="GooglemapCtrl">
+
+    <!--<div class="col-sm-6  img-rounded" style="background-color:#0000ff">-->
+    <div class="panel panel-default">
+        <div class="panel-heading">Trip Information</div>
+        <form class="form-horizontal" >
+                <br>
+                <div class="form-group">
+                    <label for="routeStart" class="col-sm-2 control-label">Start</label>
+                    <div class="col-sm-8">
+                        <input type="text" class="form-control" data-ng-model="routePoints.start" id="routeStart" placeholder="Start of Trip">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="routeEnd" class="col-sm-2 control-label">Destination</label>
+                    <div class="col-sm-8">
+                        <input type="text" class="form-control" data-ng-model="routePoints.end" id="routeEnd" placeholder="Destination">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <button ng-click="getCollegesOnRoute()" type="submit" class="btn btn-default">Get Colleges On Route</button>
+                    </div>
+                </div>
+                <br>
+        </form>
+    </div>
+
+    <div class="panel panel-default">
+        <div class="panel-heading">Stops Along the Way</div>
+        <!-- Table -->
+        <table class="table">
+            <strong>
+                <div class="col-md-1"></div>
+                <div class="col-md-11">
+                    <div class="col-md-4 strong">College Name</div>
+                    <div class="col-md-2">Miles off Route</div>
+                    <div class="col-md-2">Location</div>
+                    <div class="col-md-2">Locale</div>
+                    <div class="col-md-2">Students</div>
+                </div>
+            </strong>
+
+            <div class="col-md-12" ng-repeat="college in waypoints | orderBy:'name'" >
+                <div class="col-md-1">
+                    <button ng-click="removeStop(college)" type="submit" class="btn btn-default btn-xs ">Remove from Trip</button>
+                </div>
+                <div class="col-md-11">
+                    <div class="col-md-4"><a href="http://{{college.url}}">{{college.name}}</a></div>
+                    <div class="col-md-2">{{college.distance}}</div>
+                    <div class="col-md-2">{{college.location}}</div>
+                    <div class="col-md-2">{{college.locale}}</div>
+                    <div class="col-md-2">{{college.school_size}}</div>
+                </div>
+            </div>
+
+        </table>
+
+    </div>
+
+
+    <div class="panel panel-default">
+        <div class="panel-heading">My Colleges</div>
+        <!-- Table -->
+        <table class="table">
+            <strong>
+                <div class="col-md-1"></div>
+                <div class="col-md-11">
+                    <div class="col-md-4 strong">College Name</div>
+                    <div class="col-md-2">Miles off Route</div>
+                    <div class="col-md-2">Location</div>
+                    <div class="col-md-2">Locale</div>
+                    <div class="col-md-2">Students</div>
+                </div>
+            </strong>
+
+            <div class="col-md-12" ng-repeat="college in collegesOnRoute | orderBy:'name'" >
+                <div class="col-md-1">
+                        <button ng-click="addStop(college)" type="submit" class="btn btn-default btn-xs ">Add To Trip</button>
+                </div>
+                <div class="col-md-11">
+                    <div class="col-md-4"><a href="http://{{college.url}}">{{college.name}}</a></div>
+                    <div class="col-md-2">{{college.distance}}</div>
+                    <div class="col-md-2">{{college.location}}</div>
+                    <div class="col-md-2">{{college.locale}}</div>
+                    <div class="col-md-2">{{college.school_size}}</div>
+                </div>
+            </div>
+        </table>
+    </div>
+
     <div class="row">
-        <div class="col-md-7">
+        <div class="col-md-9">
             <ui-gmap-google-map
                     id="map-canvas"
                     center="map.center"
@@ -14,40 +102,7 @@
                     >
             </ui-gmap-google-map>
         </div>
-        <div class="col-md-5">
-            <b>Your Colleges and Universities:</b> <br>
-            <i>(Ctrl-Click for multiple selection)</i> <br>
-
-            <select multiple id="waypoints" ng-model="selectedItem">
-                <option ng-repeat="college in colleges" value="{{college.location}}">{{college.name}}</option>
-            </select>
-
-            <!--<select multiple id="waypoints">-->
-                <!--<div data-ng-repeat="college in colleges">-->
-                    <!--<option value={{college.location}}>{{college.name}}</option>-->
-                <!--</div>-->
-            <!--</select>-->
-            <form class="form-horizontal" role="form">
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">Start</label>
-                    <div class="col-sm-8">
-                        <select class="form-control" ng-model="routePoints.start"
-                                ng-options="route.name for route in map.routes.start">
-                        </select>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">End</label>
-                    <div class="col-sm-8">
-                        <select class="form-control" ng-model="routePoints.end"
-                                ng-options="route.name for route in map.routes.end">
-                        </select>
-                    </div>
-                </div>
-                <button ng-click="calcRouteNEW(routePoints,selectedItem)" type="submit" class="btn btn-default">Submit</button>
-                <br>
-                <button ng-click="getCollegesOnRoute(routePoints,selectedItem)" type="submit" class="btn btn-default">CollegesOnRoute</button>
-            </form>
+        <div class="col-md-3" id="directions-panel">
         </div>
     </div>
 </div>
