--- a/app/views/googlemap.html
+++ b/app/views/googlemap.html
@@ -27,6 +27,23 @@
         </form>
     </div>
 
+    <div class="row">
+        <div class="col-md-9">
+            <ui-gmap-google-map
+                    id="map-canvas"
+                    center="map.center"
+                    zoom="map.zoom"
+                    draggable="true"
+                    options="map.options"
+                    control="map.control"
+                    >
+            </ui-gmap-google-map>
+        </div>
+        <div class="col-md-3" id="directions-panel">
+        </div>
+    </div>
+    <br>
+    <br>
     <div class="panel panel-default">
         <div class="panel-heading">Stops Along the Way</div>
         <!-- Table -->
@@ -42,7 +59,7 @@
                 </div>
             </strong>
 
-            <div class="col-md-12" ng-repeat="college in waypoints | orderBy:'name'" >
+            <div class="col-md-12" ng-repeat="college in waypoints | orderBy:'distance'" >
                 <div class="col-md-1">
                     <button ng-click="removeStop(college)" type="submit" class="btn btn-default btn-xs ">Remove from Trip</button>
                 </div>
@@ -75,7 +92,7 @@
                 </div>
             </strong>
 
-            <div class="col-md-12" ng-repeat="college in collegesOnRoute | orderBy:'name'" >
+            <div class="col-md-12" ng-repeat="college in collegesOnRoute | orderBy:'distance'" >
                 <div class="col-md-1">
                         <button ng-click="addStop(college)" type="submit" class="btn btn-default btn-xs ">Add To Trip</button>
                 </div>
@@ -90,19 +107,4 @@
         </table>
     </div>
 
-    <div class="row">
-        <div class="col-md-9">
-            <ui-gmap-google-map
-                    id="map-canvas"
-                    center="map.center"
-                    zoom="map.zoom"
-                    draggable="true"
-                    options="map.options"
-                    control="map.control"
-                    >
-            </ui-gmap-google-map>
-        </div>
-        <div class="col-md-3" id="directions-panel">
-        </div>
-    </div>
 </div>
